--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,54 @@
-body {
-  font-family: sans-serif;
-  background-color: gray;
+#inputValue {
+  padding: 5px 10px;
+  margin: 10px auto;
+  border: 2px solid black;
+  border-radius: 5px;
+  outline: none;
+  background: #F9F0DA;
+  color: #9E9C9C;
 }
-header {
-  background-color: #098af3;
-  color: #ffffff;
-  padding: top 10px;
-  min-height: 30px;
-  border-bottom: black 2px solid;
+
+#search {
+  position: relative;
+  z-index: 1;
+  color: black;
+  font-size: 135%;
+  font-weight: 700;
+  text-decoration: none;
+  padding: .25em .5em;
+  border: none;
+  margin-left: 10px;
 }
-p {
-  font-size: 3px;
-  margin-bottom: 10px;
+
+#search:after {
+  content: "Купить";
+  /* здесь 6 букв */
+  position: absolute;
+  z-index: -1;
+  top: -2px;
+  bottom: -2px;
+  left: -2px;
+  width: calc(100% + 6*(1em*90/135) - 2px*2*2);
+  /* где 6*(1em*90/135), где 6 - это 6 букв, 90 - это font-size after, а 135 - это font-size родителя */
+  text-align: right;
+  color: #fff;
+  font-size: 90%;
+  padding: .25em .5em;
+  border-radius: 5px;
+  border: 2px solid #c61e40;
+  -webkit-transform: skewX(-10deg);
+  transform: skewX(-10deg);
+  background: linear-gradient(#d4536d, #c61e40) no-repeat 100% 0;
+  background-size: calc(6*(1em*90/135) + .5em) 100%;
+  box-shadow: inset calc(-6*(1em*90/135) - .5em) 0 rgba(255, 255, 255, 0);
+  transition: .3s;
 }
-img {
-  margin: 30%;
-  margin-right: 3%;
+
+#search:hover:after {
+  box-shadow: inset calc(-6*(1em*90/135) - .5em) 0 rgba(255, 255, 255, .2);
 }
-.images {
-  display: flex;
-  justify-content: space-around;
+
+#search:hover {
+  transition: .5s linear;
+  background-position: -200% 0, 0 0;
 }
