--- a/src/styles.css
+++ b/src/styles.css
@@ -21,14 +21,13 @@
 }
 
 #search:after {
-  content: "Купить";
-  /* здесь 6 букв */
+  content: "Купити кино";
   position: absolute;
   z-index: -1;
   top: -2px;
   bottom: -2px;
   left: -2px;
-  width: calc(100% + 6*(1em*90/135) - 2px*2*2);
+  width: calc(100% + 11*(1em*90/135) - 2px*2*2);
   /* где 6*(1em*90/135), где 6 - это 6 букв, 90 - это font-size after, а 135 - это font-size родителя */
   text-align: right;
   color: #fff;
@@ -39,8 +38,8 @@
   -webkit-transform: skewX(-10deg);
   transform: skewX(-10deg);
   background: linear-gradient(#d4536d, #c61e40) no-repeat 100% 0;
-  background-size: calc(6*(1em*90/135) + .5em) 100%;
-  box-shadow: inset calc(-6*(1em*90/135) - .5em) 0 rgba(255, 255, 255, 0);
+  background-size: calc(11*(1em*90/135) + .5em) 100%;
+  box-shadow: inset calc(-11*(1em*90/135) - .5em) 0 rgba(255, 255, 255, 0);
   transition: .3s;
 }
 
